--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "composer-plugin-api": "^1.0",
-        "fxp/composer-asset-plugin": "~1.3.1"
+        "composer-plugin-api": "^1.0"
     },
     "require-dev": {
         "composer/composer": "^1.4.0"
